Anchor the post filter menu to the label